apps/shiori/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shiori
  namespace: shiori
  annotations:
    argocd.argoproj.io/health-check.lua: |
      hs = {}
      hs.status = "Healthy"
      hs.message = "Skip health check for Ingress"
      return hs
spec:
  rules:
    - host: my-shiori.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shiori
                port:
                  name: http
